# sbd2

./: CMakeLists.txt  README.md  eksperyment.txt  main.cpp
Plots/: plotgen.py
include/: BlockInputOutput.h  CommandLine.h  Record.h  RecordBlockIO.h  defines.h
include/BlockIO/: BlockInputOutput.h  IndexBlockIO.h  RecordBlockIO.h
include/Btree/: BtreeBuffer.h  BtreeHandler.h  BtreeNode.h  BtreePage.h
latex/: sprawozdanie2.aux  sprawozdanie2.fdb_latexmk  sprawozdanie2.fls  sprawozdanie2.out  sprawozdanie2.tex
src/: BlockInputOutput.cpp  CommandLine.cpp  Record.cpp  RecordBlockIO.cpp
src/BlockIO/: BlockInputOutput.cpp  IndexBlockIO.cpp  RecordBlockIO.cpp
src/Btree/: BtreeBuffer.cpp  BtreeHandler.cpp  BtreePage.cpp
